[package]
name = "layouts"
version = "0.1.0"
authors = ["Smasher816 <Smasher816@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object-merge = "0.1.0-alpha1"
derive-object-merge = "0.1.0-alpha1"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
