[package]
name = "layouts-rs"
version = "0.1.0"
authors = ["Smasher816 <Smasher816@gmail.com>", "Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Crate to interface with https://github.com/hid-io/layouts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-object-merge = "0.1.0-alpha1"
glob = "0.3"
object-merge = "0.1.0-alpha1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
